feat: adicionando rota dashboard no swagger
